Replace `Files#readString` with Java 8 counterpart
Applies to `Parser` and `DotGraphPrinter`